welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:3: error: '<-' expected but ')' found.
    for (j<1 to 3){
                 ^MethodsPicture:7: error: illegal start of simple expression
  }
  ^